# ain-t-the-one

./: .gitignore  emotion_detection  emotions_prologue.py  guessing.py
Sentiment/: main.py  pyproject.toml
Sentiment/data/: dataset.csv
dela_manager/: .dockerignore  .env  docker-compose.yml  main.py  requirements.txt  test.db
dela_manager/app/: auth.py  config.py  database.py  exceptions.py  main.py  models.py  schems.py  storage.py
dela_manager/app/repositories/: comment_repo.py  dela.py  delo_repo.py  user_repo.py
dela_manager/app/routers/: auth.py  comments.py  system.py  tasks.py
dela_manager/app/services/: comment_service.py  minio_service.py  task_service.py
dela_manager/tests/: test_integration.py  test_task_service.py
language/: main.py  pyproject.toml
language/data/: data.csv
parser/: parse_2.py  pyproject.toml
tematics/: description.md  l2_test.ipynb  level1_test.ipynb  level_1.ipynb  level_2.ipynb  llm_classification_fin.ipynb
upload_file_true/: data.csv  dataset (2).json  pyproject.toml  true_upload.py
upload_file_true/file/: dataset.parquet  dataset.xlsx  result.json
upload_file_true/src/upload_file_true/: __init__.py
