[project]
name = "sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
