[project]
name = "sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "google>=3.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "transformers[torch]>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
]
