[project]
name = "upload-file-true"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nikgilae", email = "nikitaambrozyak@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.16.0",
    "polars>=1.35.1",
    "pydantic>=2.12.3",
]

[project.scripts]
upload-file-true = "upload_file_true:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
